--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.8.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "firebase": "^10.8.0",
     "pinia": "^2.1.7",
