--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.1.7",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
+    "type-check": "^0.4.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
